kubernetes/apps/homarr/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homarr
  labels:
    app.kubernetes.io/name: homarr
