kubernetes/apps/homarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homarr
  namespace: homarr
  labels:
    app: homarr
spec:
  type: ClusterIP
  ports:
    - port: 7575
      targetPort: 7575
      protocol: TCP
      name: web
  selector:
    app: homarr
